--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </div>
             </div>
             <p>
-              I'm a highly motivated and a passionate Software Developer. As a professional I have worked on
+              I'm a highly motivated and a passionate Software Developer with <span id="expText">26</span> of Experience. As a professional I have worked on
               implementation of Big Data Pipelines, Graphs, Machine Learning, APIs, Web Console and Dashboards, I'm
               pretty comfortable and a quick learner when it comes to exploring new tools, technologies and programming
               languages.
