updated github links

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <p><span class="typed" data-typed-items="Software Developer, Problem Solver"></span></p>
       <div class="social-links">
         <a href="https://www.facebook.com/ShubhamGilada/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://github.com/Shubham-Gilada" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://github.com/giladashubham" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/shubhamgilada/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/shubham-gilada/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
@@ -377,7 +377,7 @@
       <h3>Shubham Gilada</h3>
       <div class="social-links">
         <a href="https://www.facebook.com/ShubhamGilada/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://github.com/Shubham-Gilada" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://github.com/giladashubham" class="github"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/shubhamgilada/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/shubham-gilada/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
